<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/myImage"
        android:layout_width="97dp"
        android:layout_height="88dp"
        android:contentDescription="@string/todo"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/title"
            android:textSize="30sp"
            android:textStyle="bold">


        </TextView>

        <TextView
            android:id="@+id/textview2"
            android:layout_width="128dp"
            android:layout_height="38dp"
            android:layout_margin="5dp"
            android:text="@string/description"
            android:textSize="20sp">

        </TextView>

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />


    </LinearLayout>

</LinearLayout>