<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    >

    <TextView
        android:id="@+id/serialNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/serial_number"
        android:textSize="20sp"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/serialName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="20sp"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/serialPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:textSize="20sp"
        android:layout_margin="5dp"
        />


</LinearLayout>