<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/butter"
    android:id="@+id/statusListview"
    >

    <ImageView

        android:id="@+id/profileStatus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/profilepic"
        android:padding="10dp"
        android:src="@drawable/c"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/contactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/krishna"
            android:textSize="18sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dura"
            android:textSize="15sp"


            />



    </LinearLayout>

</LinearLayout>