<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardViewDemo">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        app:cardBackgroundColor="#EA47BCF0"


        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="15dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:padding="20dp"
        android:gravity="center"



        >

        <LinearLayout
            android:id="@+id/linearLayoutView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center"


            >

            <ImageView
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:contentDescription="@string/bird"
                android:src="@drawable/b"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitter"
                android:layout_gravity="center"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitter_desc"
                android:layout_gravity="left"


                />





        </LinearLayout>



    </androidx.cardview.widget.CardView>









</LinearLayout>