<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DynamicList">


    <ImageView
        android:id="@+id/imageInput"
        android:layout_width="195dp"
        android:layout_height="92dp"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="524dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"



        />

    <EditText
        android:id="@+id/inputTitle"
        android:layout_width="346dp"
        android:layout_height="52dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="429dp"
        android:autofillHints="Enter Title"
        android:hint="@string/enter_title"

        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/imageInput"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputDes"
        android:layout_width="229dp"
        android:layout_height="115dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="260dp"
        android:autofillHints="Enter description"
        android:hint="@string/enter_description"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/inputTitle"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="161dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDes"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/listView2"
        android:layout_width="422dp"
        android:layout_height="197dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />



</androidx.constraintlayout.widget.ConstraintLayout>